# kuneiform

./: kuneiform.cabal
app/: Main.hs
src/: Kuneiform.hs
src/Kuneiform/: Model.hs  Orphans.hs  Resources.hs  Validity.hs  ValidityOf.hs
src/Kuneiform/Model/: Core.hs  Orphans.hs  Plan.hs  STM.hs  Types.hs  World.hs
src/Kuneiform/Model/Core/: Literal.hs  Term.hs  Var.hs
src/Kuneiform/Model/Plan/: Dependencies.hs  Module.hs  Plan.hs
src/Kuneiform/Model/Types/: Config.hs  ConfigName.hs  Const.hs  ModuleName.hs  Name.hs  Reference.hs  ResourceId.hs  ResourceName.hs
src/Kuneiform/Model/World/: Goal.hs  Module.hs  State.hs  World.hs
src/Kuneiform/Orphans/: Bimap.hs  HashMap.hs
src/Kuneiform/Resources/: AWS.hs
src/Kuneiform/Resources/AWS/: S3.hs
src/Kuneiform/Resources/AWS/S3/: Bucket.hs
test/HaskellWorks/Kuneiform/STM/: ChanSpec.hs
test/Kuneiform/Model/Core/: TermSpec.hs
test/Kuneiform/Model/Plan/: DependenciesSpec.hs
