name:                   kuneiform
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/kuneiform#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Kuneiform
                      , Kuneiform.Model
                      , Kuneiform.Model.Core
                      , Kuneiform.Model.Core.Literal
                      , Kuneiform.Model.Core.Term
                      , Kuneiform.Model.Core.Var
                      , Kuneiform.Model.Plan
                      , Kuneiform.Model.Plan.Dependencies
                      , Kuneiform.Model.Plan.Module
                      , Kuneiform.Model.Plan.Plan
                      , Kuneiform.Model.STM
                      , Kuneiform.Model.Types
                      , Kuneiform.Model.Types.Config
                      , Kuneiform.Model.Types.ConfigName
                      , Kuneiform.Model.Types.Const
                      , Kuneiform.Model.Types.ModuleName
                      , Kuneiform.Model.Types.Name
                      , Kuneiform.Model.Types.Reference
                      , Kuneiform.Model.Types.ResourceId
                      , Kuneiform.Model.Types.ResourceName
                      , Kuneiform.Model.World
                      , Kuneiform.Model.World.Goal
                      , Kuneiform.Model.World.Module
                      , Kuneiform.Model.World.State
                      , Kuneiform.Model.World.World
                      , Kuneiform.Orphans
                      , Kuneiform.Orphans.Bimap
                      , Kuneiform.Orphans.HashMap
                      , Kuneiform.Resources
                      , Kuneiform.Resources.AWS
                      , Kuneiform.Resources.AWS.S3
                      , Kuneiform.Resources.AWS.S3.Bucket
                      , Kuneiform.Validity
                      , Kuneiform.ValidityOf
  build-depends:        base >= 4.7 && < 5
                      , bimap
                      , containers
                      , data-default
                      , hashable
                      , safe
                      , stm
                      , stm-containers
                      , text
                      , text-format
                      , unordered-containers
  ghc-options:          -Wall
  default-language:     Haskell2010

executable kuneiform-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , kuneiform
  default-language:     Haskell2010

test-suite kuneiform-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Kuneiform.Model.Core.TermSpec
                      , Kuneiform.Model.Plan.DependenciesSpec
  build-depends:        base
                      , hspec
                      , HUnit
                      , kuneiform
                      , unordered-containers
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kuneiform
